--- a/Api/.env.example
+++ b/Api/.env.example
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+TOKEN_NAME=NOME_DO_TOKEN_QUE_SEJA_DE_PREFERENCIA_CRIPTOGRAFADO
